<resources>
    <string name="app_name">Rugby</string>
    <string name="kick">Kick</string>
    <string name="con">Conversion</string>
    <string name="Try">Try</string>
    <string name="teama">Team A</string>
    <string name="teamb">Team B</string>
    <string name="scoreA">0</string>
    <string name="scoreB">0</string>
    <string name="A">A</string>
    <string name="B">B</string>
    <string name="space">:</string>
    <string name="reset">Reset</string>
</resources>
